Added readme and OG info

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Countdown Timer</title>
+    <title>Avodah Timer</title>
+    <meta name="description" content="A beautiful, shareable countdown timer for the web." />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Avodah Timer" />
+    <meta property="og:description" content="A beautiful, shareable countdown timer for the web." />
+    <meta property="og:image" content="https://timer.avodah.dev/timer-og.png" />
+    <meta property="og:url" content="https://timer.avodah.dev" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Avodah Timer" />
+    <meta name="twitter:description" content="A beautiful, shareable countdown timer for the web." />
+    <meta name="twitter:image" content="https://timer.avodah.dev/timer-og.png" />
   </head>
   <body>
     <div id="root"></div>
